Fix dselect segfault by adding a field description matching the dependency field enum position. Closes: #392731, #392724

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,9 @@
 dpkg (1.13.24~) UNRELEASED; urgency=low
 
+  [ Guillem Jover ]
+  * Fix dselect segfault by adding a field description matching the
+    dependency field enum position. Closes: #392731, #392724
+
   [ Updated dpkg Translations ]
   * Nepali (Shiva Prasad Pokharel). Closes: #373728
   * Catalan (Jordi Mallach). Closes: #383448
