--- a/po/ca.po
+++ b/po/ca.po
@@ -256,7 +256,7 @@ msgstr "No s'ha pogut obrir «%s» per a escriure la informació de %s"
 
 #: lib/dump.c:296
 msgid "unable to set buffering on status file"
-msgstr "no es pot establir emmagatzemament intermedi al fitxer d'estat"
+msgstr "no es pot establir emmagatzemament intermedi en el fitxer d'estat"
 
 #: lib/dump.c:307
 #, c-format
@@ -356,7 +356,7 @@ msgstr "camp de detalls «%s» del fitxer buit"
 #: lib/fields.c:94
 #, c-format
 msgid "file details field `%s' not allowed in status file"
-msgstr "camp de detalls del fitxer «%s» no permés al fitxer d'estat"
+msgstr "camp de detalls del fitxer «%s» no permés en el fitxer d'estat"
 
 #: lib/fields.c:104
 #, c-format
@@ -467,11 +467,11 @@ msgid ""
 " implicit exact match on version number, suggest using `=' instead"
 msgstr ""
 "camp «%s», referència a «%.255s»:\n"
-" coincidència implícita en el número exacte de versió, se suggereix emprar «=»"
+" coincidència implícita en el número exacte de versió, se suggereix usar «=»"
 
 #: lib/fields.c:394
 msgid "Only exact versions may be used for Provides"
-msgstr "Només podeu emprar versions exactes per a Provides"
+msgstr "Només podeu usar versions exactes per a Provides"
 
 #: lib/fields.c:398
 #, c-format
@@ -520,7 +520,7 @@ msgstr "no teniu permís per a blocar la base de dades d'estat de dpkg"
 #: lib/lock.c:66
 msgid "unable to open/create status database lockfile"
 msgstr ""
-"no es pot obrir/crear el fitxer de blocatge de la base de dades d'estat"
+"no es pot obrir/crear el fitxer de bloqueig de la base de dades d'estat"
 
 #: lib/lock.c:75
 msgid "status database area is locked by another process"
@@ -681,7 +681,7 @@ msgstr "error de configuració: %s no té paràmetres"
 #: lib/myopt.c:85
 #, c-format
 msgid "read error in configuration file `%.255s'"
-msgstr "error de lectura al fitxer de configuració «%.250s»"
+msgstr "error de lectura en el fitxer de configuració «%.250s»"
 
 #: lib/myopt.c:86
 #, c-format
@@ -762,7 +762,7 @@ msgstr "línia nova dins del nom del camp «%.*s»"
 #: lib/parse.c:159
 #, c-format
 msgid "MSDOS EOF (^Z) in field name `%.*s'"
-msgstr "EOF d'MSDOS (^Z) dins del nom del camp «%.*s»"
+msgstr "EOF de MSDOS (^Z) dins del nom del camp «%.*s»"
 
 #: lib/parse.c:162
 #, c-format
@@ -778,7 +778,7 @@ msgstr "EOF abans del valor del camp «%.*s» (falta una línia nova al final)"
 #, c-format
 msgid "MSDOS EOF char in value of field `%.*s' (missing newline?)"
 msgstr ""
-"caràcter EOF d'MSDOS dins del valor del camp «%.*s» (falta una línia nova?)"
+"caràcter EOF de MSDOS dins del valor del camp «%.*s» (falta una línia nova?)"
 
 #: lib/parse.c:188
 #, c-format
@@ -831,7 +831,7 @@ msgstr "s'ha produït un error en llegir «%s» en la línia %d"
 #: lib/parsehelp.c:39
 #, c-format
 msgid "%s, in file `%.255s' near line %d"
-msgstr "%s, al fitxer «%.255s» al costat de la línia %d"
+msgstr "%s, en el fitxer «%.255s» al costat de la línia %d"
 
 #: lib/parsehelp.c:40
 msgid "warning"
@@ -907,7 +907,7 @@ msgstr "caràcter invàlid «%c» en l'amplada del camp\n"
 #: lib/showpkg.c:157
 #, c-format
 msgid "Closing brace missing in format\n"
-msgstr "Falta la clau que tanca al format\n"
+msgstr "Falta la clau que tanca en el format\n"
 
 #: lib/varbuf.c:105
 msgid "failed to realloc for variable buffer"
@@ -1199,7 +1199,7 @@ msgstr "s'ha produït un error en tancar el conducte de find"
 #: src/archives.c:1003
 #, c-format
 msgid "find for --recursive returned unhandled error %i"
-msgstr "La recerca emprant --recursive ha tornat l'eixida no gestionada %i"
+msgstr "La recerca usant --recursive ha tornat l'eixida no gestionada %i"
 
 #: src/archives.c:1006
 msgid "searched, but found no packages (files matching *.deb)"
@@ -1538,12 +1538,12 @@ msgstr " ==> El distribuïdor del paquet ha publicat una versió actualitzada.\n
 #, c-format
 msgid "     Version in package is the same as at last installation.\n"
 msgstr ""
-"     La versió del paquet és la mateixa que la de la darrera instal·lació.\n"
+"     La versió del paquet és la mateixa que la de l'última instal·lació.\n"
 
 #: src/configure.c:586
 #, c-format
 msgid " ==> Using new file as you requested.\n"
-msgstr " ==> S'emprarà el fitxer nou tal i com heu demanat.\n"
+msgstr " ==> S'usarà el fitxer nou tal i com heu demanat.\n"
 
 #: src/configure.c:590
 #, c-format
@@ -1558,7 +1558,7 @@ msgstr " ==> Es manté el fitxer de configuració antic per defecte.\n"
 #: src/configure.c:604
 #, c-format
 msgid " ==> Using new config file as default.\n"
-msgstr " ==> S'emprarà el fitxer de configuració nou per defecte.\n"
+msgstr " ==> S'usarà el fitxer de configuració nou per defecte.\n"
 
 #: src/configure.c:612
 #, c-format
@@ -1677,7 +1677,7 @@ msgstr "  %.250s està desempaquetat, però té una versió %.250s.\n"
 #: src/depcon.c:286
 #, c-format
 msgid "  %.250s latest configured version is %.250s.\n"
-msgstr "  la darrera versió configurada de %.250s és la %.250s.\n"
+msgstr "  l'última versió configurada de %.250s és la %.250s.\n"
 
 #: src/depcon.c:295
 #, c-format
@@ -1745,7 +1745,7 @@ msgid ""
 "menu option in dselect for them to work:\n"
 msgstr ""
 "Els següents paquets han estat desempaquetats però encara no estan\n"
-"configurats.  S'han de configurar emprant dpkg --configure o l'opció\n"
+"configurats.  S'han de configurar usant dpkg --configure o l'opció\n"
 "«configure» en dselect perquè funcionen:\n"
 
 #: src/enquiry.c:91
@@ -1955,7 +1955,7 @@ msgstr ""
 #, c-format
 msgid "failed to write to updated files list file for package %s"
 msgstr ""
-"no es pot escriure al fitxer de la llista de fitxers actualitzats del "
+"no es pot escriure en el fitxer de la llista de fitxers actualitzats del "
 "paquet %s"
 
 #: src/filesdb.c:252
@@ -2072,7 +2072,7 @@ msgstr "desempaquetat però sense configurar"
 
 #: src/help.c:43
 msgid "broken due to postinst failure"
-msgstr "trencat a causa d'un error en postinst"
+msgstr "trencat degut a un error en postinst"
 
 #: src/help.c:44
 msgid "installed"
@@ -2080,7 +2080,7 @@ msgstr "instal·lat"
 
 #: src/help.c:45
 msgid "broken due to failed removal"
-msgstr "trencat a causa d'una desinstal·lació fallida"
+msgstr "trencat degut a una desinstal·lació fallida"
 
 #: src/help.c:46
 msgid "not installed but configs remain"
@@ -2213,9 +2213,9 @@ msgid ""
 "later for copying conditions. There is NO warranty.\n"
 "See %s --license for copyright and license details.\n"
 msgstr ""
-"Això és programari lliure, vegeu la Llicència Pública General GNU versió 2\n"
+"Això és programari lliure, vegeu la Llicència Publica General GNU versió 2\n"
 "o posterior per a les condicions de còpia. No hi ha CAP garantia.\n"
-"Vegeu %s --license per a veure'n més detalls.\n"
+"Vegeu %s --licence per a veure més detalls sobre la llicència.\n"
 
 #: src/main.c:57 src/query.c:478 dpkg-deb/main.c:56 dpkg-split/main.c:49
 #, c-format
@@ -2405,7 +2405,7 @@ msgstr ""
 "   1000  veryverbose       Tonteries sobre el directori dpkg/info\n"
 "   2000  stupidlyverbose   Muntanyes de tonteries, molt insanes\n"
 "\n"
-"Les opcions de depuració es barregen fent l'OR bit a bit.\n"
+"Les opcions de depuració es barregen fent el OR bit a bit.\n"
 "Noteu que els significats i els valors estan subjectes a canvis.\n"
 
 #: src/main.c:241
@@ -2814,7 +2814,7 @@ msgstr "dpkg-deb: esborra possibles zeros finals"
 #, c-format
 msgid "dpkg: warning - could not stat old file `%.250s' so not deleting it: %s"
 msgstr ""
-"dpkg: avís - no es pot fer «stat» sobre el fitxer antic «%.250s» així doncs no "
+"dpkg: avís - no es pot fer «stat» sobre el fitxer antic «%.250s» així que no "
 "s'eliminarà: %s"
 
 #: src/processarc.c:629
@@ -2915,7 +2915,7 @@ msgstr ""
 "no es pot esborrar el fitxer d'info. de control «%.250s» que ha desaparegut"
 
 # jm: Açò jo no se si traduir-ho. Ha de caber en una línia i tenim que dir
-# jm: quina lletra correspon a cada estat.
+# jm: quina lletra correspón a cada estat.
 #: src/query.c:160
 msgid ""
 "Desired=Unknown/Install/Remove/Purge/Hold\n"
@@ -3377,7 +3377,7 @@ msgstr "avís, «%s» conté un camp «%s» definit pel usuari\n"
 #: dpkg-deb/build.c:230
 #, c-format
 msgid "%d errors in control file"
-msgstr "%d errors al fitxer de control"
+msgstr "%d errors en el fitxer de control"
 
 #: dpkg-deb/build.c:241
 #, c-format
@@ -3676,7 +3676,7 @@ msgid ""
 "dpkg-deb: file looks like it might be an archive which has been\n"
 "dpkg-deb:    corrupted by being downloaded in ASCII mode\n"
 msgstr ""
-"dpkg-deb: el fitxer té pinta de ser un arxiu que ha estat corromput\n"
+"dpkg-deb: el fitxer té pinta de ser un arxiu que ha sigut corromput\n"
 "dpkg-deb     al ser descarregat en mode ASCII\n"
 
 #: dpkg-deb/extract.c:222
@@ -3706,7 +3706,7 @@ msgstr "no s'ha pogut tancar gzip -dc"
 
 #: dpkg-deb/extract.c:252
 msgid "failed to syscall lseek to files archive portion"
-msgstr "no s'ha pogut fer «syscall lseek» als fitxers porció d'arxiu"
+msgstr "no s'ha pogut fer «syscall lseek» en els fitxers porció d'arxiu"
 
 #: dpkg-deb/extract.c:260
 msgid "failed to write to pipe in copy"
@@ -4228,7 +4228,7 @@ msgstr " i "
 #: dpkg-split/queue.c:179
 #, c-format
 msgid "unable to delete used-up depot file `%.250s'"
-msgstr "no es pot esborrar el fitxer de dipòsit emprat «%.250s»"
+msgstr "no es pot esborrar el fitxer de dipòsit usat «%.250s»"
 
 #: dpkg-split/queue.c:194
 msgid "--listq does not take any arguments"
@@ -4236,7 +4236,7 @@ msgstr "--listq no pren cap argument"
 
 #: dpkg-split/queue.c:197
 msgid "Junk files left around in the depot directory:\n"
-msgstr "Queden fitxers de brutícia al directori de dipòsit:\n"
+msgstr "Queden fitxers de brutícia en el directori de dipòsit:\n"
 
 #: dpkg-split/queue.c:202 dpkg-split/queue.c:226
 #, c-format
@@ -5682,10 +5682,10 @@ msgstr ""
 #~ "\n"
 #~ "<deb> és el nom de fitxer d'un arxiu en format Debian.\n"
 #~ "<fitxerc> és el nom d'un component d'un fitxer administratiu.\n"
-#~ "<campc> és el nom d'un camp al fitxer de «control» principal.\n"
+#~ "<campc> és el nom d'un camp en el fitxer de «control» principal.\n"
 #~ "\n"
 #~ "Opcions:\n"
-#~ "  --showformat=<format>      Empra un format alternatiu per a --show.\n"
+#~ "  --showformat=<format>      Usa un format alternatiu per a --show.\n"
 #~ "  -D                         Habilita l'eixida de depuració.\n"
 #~ "  --old, --new               Selecciona el format de l'arxiu.\n"
 #~ "  --nocheck                  Suprimeix la comprovació del fitxer de "
@@ -5738,7 +5738,7 @@ msgstr ""
 #~ "  -d|--discard [<fitxer> ...]     Descarta els bocins desemparellats.\n"
 #~ "\n"
 #~ "Opcions:\n"
-#~ "  --depotdir <directori>          Empra <directori> en comptes de %s/%s.\n"
+#~ "  --depotdir <directori>          Usa <directori> en comptes de %s/%s.\n"
 #~ "  -S|--partsize <mida>            (en KiB, per a -s (per defecte és "
 #~ "450).\n"
 #~ "  -o|--output <fitxer>            Per a -j (per defecte és\n"
