--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.13.24~) UNRELEASED; urgency=low
+dpkg (1.13.24) unstable; urgency=low
 
   [ Guillem Jover ]
   * Fix dselect segfault by adding a field description matching the
@@ -7,7 +7,7 @@ dpkg (1.13.24~) UNRELEASED; urgency=low
   [ Updated dpkg Translations ]
   * Nepali (Shiva Prasad Pokharel). Closes: #373728
 
- -- Guillem Jover <guillem@debian.org>  Thu, 12 Oct 2006 03:15:23 +0300
+ -- Guillem Jover <guillem@debian.org>  Fri, 13 Oct 2006 16:34:39 +0300
 
 dpkg (1.13.23) unstable; urgency=low
 
