--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-10-13  Guillem Jover  <guillem@debian.org>
 
+	* configure.ac: Release 1.13.24.
+
+2006-10-13  Guillem Jover  <guillem@debian.org>
+
 	* dselect/pkgdisplay.cc (relatestrings): Add a string for the Breaks
 	field as it should match the enum debtype in 'lib/dpkg-db.h'.
 
