--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-10-13  Guillem Jover  <guillem@debian.org>
 
+	* configure.ac: Bump version to 1.13.25~.
+
+2006-10-13  Guillem Jover  <guillem@debian.org>
+
 	* configure.ac: Release 1.13.24.
 
 2006-10-13  Guillem Jover  <guillem@debian.org>
