--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+dpkg (1.13.25~) UNRELEASED; urgency=low
+
+
+ -- Guillem Jover <guillem@debian.org>  Fri, 13 Oct 2006 16:54:58 +0300
+
 dpkg (1.13.24) unstable; urgency=low
 
   [ Guillem Jover ]
