--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
 dpkg (1.13.25~) UNRELEASED; urgency=low
 
+  [ Updated dpkg Translations ]
+  * Norwegian Bokmal (Hans Fredrik Nordhaug). Closes: #391143
 
  -- Guillem Jover <guillem@debian.org>  Fri, 13 Oct 2006 16:54:58 +0300
 
