--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-18  Eddy Petrișor  <eddy.petrisor@gmail.com>
+
+	* ro.po: use Romanian quotes instead of other types of quotes (still 920t)
+
 2006-10-18  Hans Fredrik Nordhaug  <hans@nordhaug.priv.no>
 
 	* nb.po: Updated to 920t.
