--- a/po/ro.po
+++ b/po/ro.po
@@ -15,18 +15,19 @@
 # Ruşeţ Zeno <rzeno@cwazy.co.uk>, 2005.
 # Eddy Petrişor <eddy.petrisor@gmail.com>, 2005, 2006.
 # Sorin Batariuc <sorin@bonbon.net>, 2005, 2006.
+# Eddy Petrișor <eddy.petrisor@gmail.com>, 2006.
 msgid ""
 msgstr ""
 "Project-Id-Version: ro\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-08-17 16:02+0200\n"
-"PO-Revision-Date: 2006-08-18 00:20+0300\n"
-"Last-Translator: Eddy Petrişor <eddy.petrisor@gmail.com>\n"
+"PO-Revision-Date: 2006-10-18 21:08+0300\n"
+"Last-Translator: Eddy Petrișor <eddy.petrisor@gmail.com>\n"
 "Language-Team: Romanian <debian-l10n-romanian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.2\n"
+"X-Generator: KBabel 1.11.4\n"
 "Plural-Forms: nplurals=3;plural=(n==1?0:(((n%100>19)||((n%100==0)&&(n!=0)))?2:1))\n"
 
 # numele funcţilor şi argumentelor acestora rămân cele originale
@@ -453,7 +454,7 @@ msgid ""
 "`%s' field, reference to `%.255s':\n"
 " bad version relationship %c%c"
 msgstr ""
-"câmpul „%s”, referinţă la `%.255s':\n"
+"câmpul „%s”, referinţă la „%.255s”:\n"
 " relaţie cu o versiune incorectă %c%c"
 
 #: lib/fields.c:377
@@ -462,8 +463,8 @@ msgid ""
 "`%s' field, reference to `%.255s':\n"
 " `%c' is obsolete, use `%c=' or `%c%c' instead"
 msgstr ""
-"câmpul „%s”, referitor la `%.255s':\n"
-" „%c” este învechit, folosiţi `%c=' sau `%c%c' în loc"
+"câmpul „%s”, referitor la „%.255s”:\n"
+" „%c” este învechit, folosiţi „%c=” sau „%c%c” în loc"
 
 #: lib/fields.c:387
 #, c-format
@@ -471,8 +472,8 @@ msgid ""
 "`%s' field, reference to `%.255s':\n"
 " implicit exact match on version number, suggest using `=' instead"
 msgstr ""
-"câmpul „%s”, referitor la `%.255s':\n"
-" implică potrivirea exactă a numărului versiunii, sugerăm folosirea `=' în "
+"câmpul „%s”, referitor la „%.255s”:\n"
+" implică potrivirea exactă a numărului versiunii, sugerăm folosirea „=” în "
 "loc"
 
 #: lib/fields.c:394
@@ -485,7 +486,7 @@ msgid ""
 "`%s' field, reference to `%.255s':\n"
 " version value starts with non-alphanumeric, suggest adding a space"
 msgstr ""
-"câmpul „%s”, referitor la `%.255s':\n"
+"câmpul „%s”, referitor la „%.255s”:\n"
 " valoarea versiunii nu începe cu caracter alfanumeric, sugerăm adăugarea "
 "unui spaţiu"
 
@@ -1801,7 +1802,7 @@ msgid ""
 " Please use `dpkg --configure dpkg', and then try again.\n"
 msgstr ""
 "Versiunea de dpkg cu suport funcţional de epoci încă nu este configurată.\n"
-" Vă rog să folosiţi 'dpkg --configure dpkg' şi apoi să încercaţi din nou.\n"
+" Vă rugăm să folosiţi „dpkg --configure dpkg” şi apoi să încercaţi din nou.\n"
 
 #: src/enquiry.c:264
 #, c-format
@@ -2470,7 +2471,7 @@ msgstr ""
 "   1000   veryverbose       Mult mai multe detalii ex. director dpkg/info\n"
 "   2000   stupidlyverbose   Cantităţi absurde de informaţii\n"
 "\n"
-"Opţiunile de depanare pot fi combinate folosind \"sau\" pe biţi.\n"
+"Opţiunile de depanare pot fi combinate folosind „sau” pe biţi.\n"
 "A se nota că înţelesul şi valorile se pot schimba.\n"
 
 #: src/main.c:241
@@ -3984,10 +3985,10 @@ msgid ""
 "unpacked using `dpkg-deb --extract' will be incorrectly installed !\n"
 msgstr ""
 "\n"
-"Folosiţi `dpkg' pentru a instala şi şterge pachetele din sistem, sau\n"
-"`dselect' sau `aptitude' pentru a administrare mai uşoară a pachetelor.  "
+"Folosiţi „dpkg” pentru a instala şi şterge pachetele din sistem, \n"
+"„dselect” sau „aptitude” pentru a administrare mai uşoară a pachetelor.  "
 "Pachetele\n"
-"despachetate cu `dpkg-deb --extract' vor fi instalate incorect !\n"
+"despachetate cu „dpkg-deb --extract” vor fi instalate incorect !\n"
 
 #: dpkg-deb/main.c:115
 msgid ""
@@ -4042,7 +4043,7 @@ msgstr "fişierul „%.250s” este invalid - suma de control MD5 neverificată 
 #: dpkg-split/info.c:131
 #, c-format
 msgid "file `%.250s' is corrupt - no slash between part numbers"
-msgstr "fişierul „%.250s” este corupt - nu conţine \"/\" între numerele volumelor"
+msgstr "fişierul „%.250s” este corupt - nu conţine „/” între numerele volumelor"
 
 #: dpkg-split/info.c:140
 #, c-format
@@ -4965,7 +4966,7 @@ msgstr ""
 "  --info-file=<cale>     specifică fişierul info care va fi instalat în "
 "director.\n"
 "  --dir-file=<cale>      specifică numele arhivei info.\n"
-"  --infodir=<director>   la fel ca '--dir-file=<director>/dir'.\n"
+"  --infodir=<director>   la fel ca „--dir-file=<director>/dir”.\n"
 "  --info-dir=<director>  identic.\n"
 "  --keep-old             nu se înlocuiesc intrările vechi şi nici nu se "
 "şterg\n"
@@ -5405,7 +5406,7 @@ msgstr ""
 "Se verifică versiunile disponibile ale lui %s, se actualizează legăturile în "
 "%s ...\n"
 "(Puteţi modifica the legăturile simbolice de acolo dacă doreţi - a se vedea "
-"`man ln'.)"
+"„man ln”.)"
 
 #: scripts/update-alternatives.pl:334
 #, perl-format
