[l10n:ro] some small wording improvements

--- a/po/ro.po
+++ b/po/ro.po
@@ -21,7 +21,7 @@ msgstr ""
 "Project-Id-Version: ro\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-08-17 16:02+0200\n"
-"PO-Revision-Date: 2006-10-18 21:08+0300\n"
+"PO-Revision-Date: 2006-10-20 11:47+0300\n"
 "Last-Translator: Eddy Petrișor <eddy.petrisor@gmail.com>\n"
 "Language-Team: Romanian <debian-l10n-romanian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -529,7 +529,7 @@ msgstr "imposibil a deschide/crea fişierul de blocare a stării bazei de date"
 
 #: lib/lock.c:75
 msgid "status database area is locked by another process"
-msgstr "zona stării bazei de date este blocată de alt proces"
+msgstr "baza de date este blocată de alt proces"
 
 #: lib/lock.c:76
 msgid "unable to lock dpkg status database"
@@ -2851,7 +2851,7 @@ msgstr "Se deconfigurează %s, pentru a fi posibilă ştergerea %s ...\n"
 #: src/processarc.c:469
 #, c-format
 msgid "Unpacking replacement %.250s ...\n"
-msgstr "Se dezarhivează înlocuitorul %.250s ...\n"
+msgstr "Se dezarhivează pachetul înlocuitor pentru %.250s ...\n"
 
 #: src/processarc.c:550
 msgid "unable to exec dpkg-deb to get filesystem archive"
