Updated Korean translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,4 +1,8 @@
-2006-10-18  Eddy Petrișor  <eddy.petrisor@gmail.com>
+2006-10-20  Sunjae Park  <darehanl@gmail.com>
+
+	* ko.po: Updated to 920t (but a few formats are incorrect)
+
+2006-10-18  Eddy Petri?or  <eddy.petrisor@gmail.com>
 
 	* ro.po: use Romanian quotes instead of other types of quotes
 	and small wording improvement (still 920t)
