Completed Chinese Traditional

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 dpkg (1.13.25~) UNRELEASED; urgency=low
 
   [ Updated dpkg translations ]
+  * Chinese (Traditional, Asho Yeh)
   * Korean (Sunjae Park). Closes: #394135
   * Norwegian Bokmal (Hans Fredrik Nordhaug). Closes: #391143
   * Romanian - use Romanian quotes and improvemnts (Eddy Petri?or).
