--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-21  Asho Yeh  <asho@debian.org.tw>
+
+	* zh_TW.po: Updated to 920t
+
 2006-10-20  Sunjae Park  <darehanl@gmail.com>
 
 	* ko.po: Updated to 920t (but a few formats are incorrect)
