hu trunk: Updated to 815t

--- a/po/hu.po
+++ b/po/hu.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-08-17 16:02+0200\n"
-"PO-Revision-Date: 2006-10-21 14:56+0100\n"
+"PO-Revision-Date: 2006-10-21 17:04+0100\n"
 "Last-Translator: SZERVÁC Attila <sas@321.hu>\n"
 "Language-Team: hu\n"
 "MIME-Version: 1.0\n"
@@ -3083,7 +3083,7 @@ msgstr "nem törölhető fájl: `%.250s'"
 #: src/remove.c:315
 #, c-format
 msgid "unable to delete control info file `%.250s'"
-msgstr ""
+msgstr "nem tudom törölni `%.250s' kontroll info fájlt"
 
 #: src/remove.c:368
 #, c-format
@@ -3098,17 +3098,17 @@ msgstr "%s beállító fájlok törlése ...\n"
 #: src/remove.c:454
 #, c-format
 msgid "cannot remove old config file `%.250s' (= `%.250s')"
-msgstr ""
+msgstr "nem tudom törölni a régi `%.250s' (= `%.250s') konfig fájlt"
 
 #: src/remove.c:469
 #, c-format
 msgid "cannot read config file dir `%.250s' (from `%.250s')"
-msgstr ""
+msgstr "olvashatatlan `%.250s' konfig fájl könyvtár (innen: `%.250s')"
 
 #: src/remove.c:504
 #, c-format
 msgid "cannot remove old backup config file `%.250s' (of `%.250s')"
-msgstr ""
+msgstr "`%.250s' (ezé: `%.250s') régi mentett konfig fájl eltávolíthatatlan"
 
 #: src/remove.c:540
 #, c-format
@@ -3182,11 +3182,11 @@ msgstr "--%s pontosan 1 Packages fájl argumentumot vár"
 
 #: src/update.c:57
 msgid "unable to access dpkg status area for bulk available update"
-msgstr ""
+msgstr "nem tudok hozzáférni a dpkg állapot területhez a tömeges available frissítéshez"
 
 #: src/update.c:59
 msgid "bulk available update requires write access to dpkg status area"
-msgstr ""
+msgstr "a tömeges available frissítés a dpkg állapot területhez írási jogot igényel"
 
 #: src/update.c:66
 #, c-format
@@ -3313,11 +3313,11 @@ msgstr "figyelem, `%s' konffájl nem sima fájl\n"
 
 #: dpkg-deb/build.c:302
 msgid "error reading conffiles file"
-msgstr ""
+msgstr "hiba a conffiles fájl olvasásakor"
 
 #: dpkg-deb/build.c:305
 msgid "error opening conffiles file"
-msgstr ""
+msgstr "hiba a conffiles fájl megnyitásakor"
 
 #: dpkg-deb/build.c:308
 #, c-format
@@ -3374,17 +3374,17 @@ msgstr "az ideiglenes fájl (vezérlő) visszaállítása meghiúsult"
 
 #: dpkg-deb/build.c:379
 msgid "failed to make tmpfile (data)"
-msgstr ""
+msgstr "tmpfájl létrehozása sikertelen (adat)"
 
 #: dpkg-deb/build.c:380
 #, c-format
 msgid "failed to open tmpfile (data), %s"
-msgstr ""
+msgstr "tmpfájl megnyitása sikertelen (adat), %s"
 
 #: dpkg-deb/build.c:383
 #, c-format
 msgid "failed to unlink tmpfile (data), %s"
-msgstr ""
+msgstr "tmpfájl elláncolása sikertelen (adat), %s"
 
 #: dpkg-deb/build.c:407
 #: dpkg-deb/extract.c:274
@@ -3894,7 +3894,7 @@ msgstr "Az alábbi fájl: `%.250s' sérült - a méret rossz az idézett részsz
 #: dpkg-split/info.c:163
 #, c-format
 msgid "unable to fstat part file `%.250s'"
-msgstr ""
+msgstr "`%.250s' rész fájl fstat sikertelen"
 
 #: dpkg-split/info.c:169
 #, c-format
@@ -3973,7 +3973,7 @@ msgstr "a két fájl: `%.250s és `%.250s' nem ugyanannak részei"
 #: dpkg-split/join.c:89
 #, c-format
 msgid "there are several versions of part %d - at least `%.250s' and `%.250s'"
-msgstr ""
+msgstr "%d. résznek több változata van - legalább `%.250s' és `%.250s'"
 
 #: dpkg-split/join.c:102
 msgid "--join requires one or more part file arguments"
@@ -4006,6 +4006,14 @@ msgid ""
 "  -d|--discard [<filename> ...]    Discard unmatched pieces.\n"
 "\n"
 msgstr ""
+"Parancsok:\n"
+"  -s|--split <fájl> [<előtag>]     Archívum szétvágása.\n"
+"  -j|--join <rész> <rész> ...      Részek összerakása.\n"
+"  -I|--info <rész> ...             Egy rész adatainak kiírása.\n"
+"  -a|--auto -o <teljes> <rész>    Részek automata összehozása.\n"
+"  -l|--listq                       Nem illő elemek listája.\n"
+"  -d|--discard [<fájlnév> ...]    Nem illő elemek elvetése.\n"
+"\n"
 
 #: dpkg-split/main.c:69
 #, c-format
@@ -4050,7 +4058,7 @@ msgstr "váratlan fájl vége jel itt: %.250s"
 
 #: dpkg-split/main.c:116
 msgid "part size is far too large or is not positive"
-msgstr ""
+msgstr "a rész mérete bőven túl vagy nem pozitív"
 
 #: dpkg-split/main.c:120
 #, c-format
@@ -4126,7 +4134,7 @@ msgstr "Szemét fájlok maradtak a raktár könyvtárban:\n"
 #: dpkg-split/queue.c:226
 #, c-format
 msgid "unable to stat `%.250s'"
-msgstr ""
+msgstr "nem lelem `%.250s'-t"
 
 #: dpkg-split/queue.c:205
 #, c-format
@@ -4140,12 +4148,12 @@ msgstr " %s (nem sima fájl)\n"
 
 #: dpkg-split/queue.c:212
 msgid "Packages not yet reassembled:\n"
-msgstr ""
+msgstr "Még nincsenek újragyűjtve a csomagok:\n"
 
 #: dpkg-split/queue.c:228
 #, c-format
 msgid "part file `%.250s' is not a plain file"
-msgstr ""
+msgstr "`%.250s' rész fájl nem sima fájl"
 
 #: dpkg-split/queue.c:233
 #, c-format
@@ -4177,7 +4185,7 @@ msgstr "e forrásfájl nem megnyitható: `%.250s'"
 
 #: dpkg-split/split.c:63
 msgid "unable to fstat source file"
-msgstr ""
+msgstr "forrás fájl fstat sikertelen"
 
 #: dpkg-split/split.c:64
 #, c-format
@@ -4230,6 +4238,13 @@ msgid ""
 "  --help       show this help message.\n"
 "  --version    show the version.\n"
 msgstr ""
+"Használat: %s [<lehetőség> ...] [--] [<könyvtár_név>]\n"
+"\n"
+"Lehetőségek:\n"
+"  --unsafe     pár további talán hasznos opció beállítása.\n"
+"               figyelem: e lehetőség elronthat egy amúgy korrekt fájlt.\n"
+"  --help       e súgó mutatása.\n"
+"  --version    verzió mutatása.\n"
 
 #: scripts/cleanup-info.pl:66
 #: scripts/install-info.pl:508
@@ -4364,7 +4379,7 @@ msgstr ""
 #: scripts/update-alternatives.pl:110
 #, perl-format
 msgid "two modes specified: %s and --%s"
-msgstr ""
+msgstr "2 mód megadva: %s és --%s"
 
 #: scripts/dpkg-divert.pl:97
 #, perl-format
@@ -4373,7 +4388,7 @@ msgstr "--%s egy divert-to argumentumot vár"
 
 #: scripts/dpkg-divert.pl:99
 msgid "divert-to may not contain newlines"
-msgstr ""
+msgstr "divert-to nem tartalmazhat újsorokat"
 
 #: scripts/dpkg-divert.pl:101
 #, perl-format
@@ -4429,7 +4444,7 @@ msgstr "\"%s\" fájlnév nem abszolút"
 #: scripts/dpkg-divert.pl:128
 #: scripts/dpkg-statoverride.pl:118
 msgid "file may not contain newlines"
-msgstr ""
+msgstr "fájl nem tartalmazhat újsorokat"
 
 #: scripts/dpkg-divert.pl:129
 msgid "Cannot divert directories"
@@ -4443,12 +4458,12 @@ msgstr "`%s' elhagyása"
 #: scripts/dpkg-divert.pl:141
 #, perl-format
 msgid "`%s' clashes with `%s'"
-msgstr ""
+msgstr "`%s' ütközik ezzel: `%s'"
 
 #: scripts/dpkg-divert.pl:147
 #, perl-format
 msgid "Adding `%s'"
-msgstr ""
+msgstr "`%s' hozzáadása"
 
 #: scripts/dpkg-divert.pl:157
 #, perl-format
@@ -4457,6 +4472,9 @@ msgid ""
 "  when removing `%s'\n"
 "  found `%s'"
 msgstr ""
+"nem-illeszkedő divert-to\n"
+"  `%s' eltávolításakor\n"
+"  `%s'-t találtam"
 
 #: scripts/dpkg-divert.pl:159
 #, perl-format
@@ -4465,6 +4483,9 @@ msgid ""
 "  when removing `%s'\n"
 "  found `%s'"
 msgstr ""
+"nem-illeszkedő csomag\n"
+"  `%s' eltávolításakor\n"
+"  `%s'-t találtam"
 
 #: scripts/dpkg-divert.pl:161
 #, perl-format
@@ -4474,7 +4495,7 @@ msgstr "%s eltávolítása"
 #: scripts/dpkg-divert.pl:176
 #, perl-format
 msgid "No diversion `%s', none removed"
-msgstr ""
+msgstr "Nincs `%s' eltérítés, nem volt eltávolítás"
 
 #: scripts/dpkg-divert.pl:205
 #, perl-format
@@ -4502,11 +4523,13 @@ msgid ""
 "rename involves overwriting `%s' with\n"
 "  different file `%s', not allowed"
 msgstr ""
+"átnevezés `%s' felülírásával járna\n"
+"  `%s' eltérő fájllal, ez nem engedélyezett"
 
 #: scripts/dpkg-divert.pl:251
 #, perl-format
 msgid "rename: remove duplicate old link `%s': %s"
-msgstr ""
+msgstr "átnevezés: kettős régi `%s' lánc törlése: %s"
 
 #: scripts/dpkg-divert.pl:253
 #, perl-format
@@ -4576,6 +4599,21 @@ msgid ""
 "  --help                   show this help message.\n"
 "  --version                show the version.\n"
 msgstr ""
+"Használat: %s [<opció> ...] <parancs>\n"
+"\n"
+"Parancsok:\n"
+"  --add <tulajdonos> <csoport> <mód> <fájl>\n"
+"                           új bejegyzés hozzáadása az adatbázishoz.\n"
+"  --remove <fájl>          fájl eltávolítása az adatbázisból.\n"
+"  --list [<glob-pattern>]  adatbázisban lévő felülbírálások listája.\n"
+"\n"
+"Opciók:\n"
+"  --admindir <könyvtár>    könyvtár beállítása a statoverride fájllal.\n"
+"  --update                 fájl jogok azonnali frissítése.\n"
+"  --force                  művelet kényszerítése.\n"
+"  --quiet                  csendes művelet, minimális kimenet.\n"
+"  --help                   e súgó üzenet mutatása.\n"
+"  --version                verzió mutatása.\n"
 
 #: scripts/dpkg-statoverride.pl:93
 msgid "no mode specified"
@@ -4614,12 +4652,12 @@ msgstr "tilos %s mód"
 #: scripts/dpkg-statoverride.pl:146
 #: scripts/dpkg-statoverride.pl:165
 msgid "stripping trailing /"
-msgstr ""
+msgstr "/ leszedése"
 
 #: scripts/dpkg-statoverride.pl:122
 #, perl-format
 msgid "An override for \"%s\" already exists, "
-msgstr ""
+msgstr "\"%s\" egy felülbírálása már létezik, "
 
 #: scripts/dpkg-statoverride.pl:124
 msgid "but --force specified so will be ignored."
@@ -4646,11 +4684,11 @@ msgstr "sikertelen %s chmod: %s"
 
 #: scripts/dpkg-statoverride.pl:148
 msgid "No override present."
-msgstr ""
+msgstr "Nincs felülbírálás."
 
 #: scripts/dpkg-statoverride.pl:156
 msgid "warning: --update is useless for --remove"
-msgstr ""
+msgstr "figyelem: a --update értelmetlen --remove esetén"
 
 #: scripts/dpkg-statoverride.pl:182
 #, perl-format
@@ -4660,7 +4698,7 @@ msgstr "nem megnyitható statoverride: %s"
 #: scripts/dpkg-statoverride.pl:188
 #, perl-format
 msgid "Multiple overrides for \"%s\", aborting"
-msgstr ""
+msgstr "\"%s\" többszöri felülbírálása, megszakítva"
 
 #: scripts/dpkg-statoverride.pl:201
 #, perl-format
@@ -4670,7 +4708,7 @@ msgstr "nem megnyitható új statoverride fájl: %s"
 #: scripts/dpkg-statoverride.pl:208
 #, perl-format
 msgid "error removing statoverride-old: %s"
-msgstr ""
+msgstr "hiba a statoverride-old törlésekor: %s"
 
 #: scripts/dpkg-statoverride.pl:210
 #, perl-format
@@ -4680,7 +4718,7 @@ msgstr "hiba az új statoverride-old létrehozásakor: %s"
 #: scripts/dpkg-statoverride.pl:212
 #, perl-format
 msgid "error installing new statoverride: %s"
-msgstr ""
+msgstr "hiba az új statoverride telepítésekor: %s"
 
 #: scripts/install-info.pl:19
 msgid ""
