--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ dpkg (1.13.25~) UNRELEASED; urgency=low
   * Korean (Sunjae Park). Closes: #394135
   * Norwegian Bokmal (Hans Fredrik Nordhaug). Closes: #391143
   * Romanian - use Romanian quotes and improvemnts (Eddy Petri?or).
+  * Catalan (Jordà Polo).
 
  -- Guillem Jover <guillem@debian.org>  Fri, 13 Oct 2006 16:54:58 +0300
 
