--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ dpkg (1.13.25~) UNRELEASED; urgency=low
   * Norwegian Bokmal (Hans Fredrik Nordhaug). Closes: #391143
   * Romanian - use Romanian quotes and improvemnts (Eddy Petri?or).
   * Catalan (Jordà Polo).
+  * Swedish (Peter Karlsson).
 
  -- Guillem Jover <guillem@debian.org>  Fri, 13 Oct 2006 16:54:58 +0300
 
