--- a/po/sv.po
+++ b/po/sv.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: dpkg 1.13.11.0.1\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-08-17 16:02+0200\n"
-"PO-Revision-Date: 2006-08-19 17:26+0100\n"
-"Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
+"PO-Revision-Date: 2006-11-01 19:58+0100\n"
+"Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-1\n"
@@ -333,7 +333,7 @@ msgstr "skräp efter %s"
 #: lib/fields.c:74
 #, c-format
 msgid "invalid package name (%.250s)"
-msgstr "felaktigt paketnamn (%.250s)"
+msgstr "ogiltigt paketnamn (%.250s)"
 
 #: lib/fields.c:91
 #, c-format
@@ -419,7 +419,7 @@ msgstr "\"%s\"-fältet: saknat paketnamn, eller skräptecken där paketnamnet förvä
 #: lib/fields.c:340
 #, c-format
 msgid "`%s' field, invalid package name `%.255s': %s"
-msgstr "\"%s\"-fältet: felaktigt paketnamn \"%.255s\": %s"
+msgstr "\"%s\"-fältet: ogiltigt paketnamn \"%.255s\": %s"
 
 #: lib/fields.c:371
 #, c-format
@@ -1558,7 +1558,7 @@ msgstr " rekommenderar "
 
 #: src/depcon.c:156
 msgid " breaks "
-msgstr " gör trasigt "
+msgstr " förstör "
 
 #: src/depcon.c:157
 msgid " conflicts with "
@@ -2647,8 +2647,8 @@ msgid ""
 "dpkg: regarding %s containing %s:\n"
 " package uses Breaks; not supported in this dpkg\n"
 msgstr ""
-"dpkg: angående %s innehållandes %s:\n"
-" paketet använder Gör trasigt; stöds inte i denna dpkg\n"
+"dpkg: angående %s som innehåller %s:\n"
+" paketet använder Breaks (förstör); stöds inte i denna dpkg\n"
 
 #: src/processarc.c:260
 #, c-format
@@ -2658,7 +2658,7 @@ msgstr "beroendeproblemet stöds inte - installerar inte %.250s"
 #: src/processarc.c:262
 #, c-format
 msgid "dpkg: warning - ignoring Breaks !\n"
-msgstr "dpkg: varning - ignorerar Gör trasigt!\n"
+msgstr "dpkg: varning - ignorerar Breaks (förstör)!\n"
 
 #: src/processarc.c:275
 #, c-format
@@ -4396,7 +4396,7 @@ msgstr "två lägen angivna: %s och --%s"
 #: scripts/dpkg-divert.pl:97
 #, perl-format
 msgid "--%s needs a divert-to argument"
-msgstr "--%s behöver ett \"divert-to\"-argument"
+msgstr "--%s behöver ett mål som argument"
 
 #: scripts/dpkg-divert.pl:99
 msgid "divert-to may not contain newlines"
@@ -4582,7 +4582,7 @@ msgstr "installera ny diversions: %s"
 #: scripts/update-alternatives.pl:662
 #, perl-format
 msgid "internal error: %s corrupt: %s"
-msgstr "internt fel: %s förstörd: %s"
+msgstr "internt fel: %s trasig: %s"
 
 #: scripts/dpkg-statoverride.pl:24
 msgid ""
