Updated Nepali translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ dpkg (1.13.25~) UNRELEASED; urgency=low
   * Chinese (Traditional, Asho Yeh)
   * Korean (Sunjae Park). Closes: #394135
   * Norwegian Bokmal (Hans Fredrik Nordhaug). Closes: #391143
+  * Nepali (Shiva Prasad Pokharel).
   * Romanian - use Romanian quotes and improvemnts (Eddy Petri?or).
   * Catalan (Jordà Polo).
   * Swedish (Peter Karlsson).
