--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-11-06  Paras pradhan  <pradhanparas@gmail.com>
+
+	* ne.po: Updated to 920t by Shiva Prasad Pokharel
+
 2006-10-22  Jordi Mallach  <jordi@debian.org>
 
 	* ca.po: Updated to 920t by Jordà Polo.
