Changelog police patrol.

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,7 +5,7 @@ dpkg (1.13.25~) UNRELEASED; urgency=low
   * Korean (Sunjae Park). Closes: #394135
   * Norwegian Bokmal (Hans Fredrik Nordhaug). Closes: #391143
   * Nepali (Shiva Prasad Pokharel).
-  * Romanian - use Romanian quotes and improvemnts (Eddy Petri?or).
+  * Romanian (Eddy Petrişor).
   * Catalan (Jordà Polo).
   * Swedish (Peter Karlsson).
 
