* ca.po: Correct s/gzip/bzip2/ in 2 strings. Add missing '%s' in 	format strings. 	* ko.po: Mark 3 strings as fuzzy, as they were not matching the 	original ones.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,13 @@
+2006-11-17  Guillem Jover  <guillem@debian.org>
+
+	* ca.po: Correct s/gzip/bzip2/ in 2 strings. Add missing '%s' in
+	format strings.
+	* ko.po: Mark 3 strings as fuzzy, as they were not matching the
+	original ones.
+
 2006-11-06  Paras pradhan  <pradhanparas@gmail.com>
 
-	* ne.po: Updated to 920t by Shiva Prasad Pokharel
+	* ne.po: Updated to 920t by Shiva Prasad Pokharel.
 
 2006-11-01  Peter Karlsson  <peterk@debian.org>
 
