--- a/po/ca.po
+++ b/po/ca.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: dpkg 1.13\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-08-17 16:02+0200\n"
-"PO-Revision-Date: 2006-10-22 21:31+0200\n"
+"PO-Revision-Date: 2006-11-02 02:25+0200\n"
 "Last-Translator: Jordà Polo <jorda@ettin.org>\n"
 "Language-Team: Catalan <debian-l10n-catalan@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -71,12 +71,12 @@ msgstr "%s: no s'ha pogut executar gzip -dc"
 #: lib/compression.c:76
 #, c-format
 msgid "%s: internal bzip2 error: `%s'"
-msgstr "%s: s'ha produït un error intern de gzip: «%s»"
+msgstr "%s: s'ha produït un error intern de bzip2: «%s»"
 
 #: lib/compression.c:91
 #, c-format
 msgid "%s: failed to exec bzip2 -dc"
-msgstr "%s: no s'ha pogut executar gzip -dc"
+msgstr "%s: no s'ha pogut executar bzip2 -dc"
 
 #: lib/compression.c:94
 #, c-format
@@ -4537,7 +4537,7 @@ msgstr "no es pot tancar %s després de la lectura: %s"
 #: scripts/update-alternatives.pl:472
 #, perl-format
 msgid "unable to close %s: %s"
-msgstr "no es pot tancar %s"
+msgstr "no es pot tancar %s: %s"
 
 #: scripts/cleanup-info.pl:171 scripts/install-info.pl:490
 #, perl-format
@@ -5312,7 +5312,7 @@ msgstr "--slave necessita <enllaç> <nom> <camí>"
 #: scripts/update-alternatives.pl:147
 #, perl-format
 msgid "slave name %s duplicated"
-msgstr "el nom de l'esclau està duplicat"
+msgstr "el nom de l'esclau %s està duplicat"
 
 #: scripts/update-alternatives.pl:148
 #, perl-format
