Fix year 2018 in changelog for Michael Alan Dorman's upload in 1998, which was confusing the changelog parsers.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,9 @@
 dpkg (1.13.25~) UNRELEASED; urgency=low
 
+  [ Guillem Jover ]
+  * Fix year 2018 in changelog for Michael Alan Dorman's upload in 1998,
+    which was confusing the changelog parsers.
+
   [ Updated dpkg translations ]
   * Chinese (Traditional, Asho Yeh)
   * Korean (Sunjae Park). Closes: #394135
@@ -3145,7 +3149,7 @@ dpkg (1.4.0.20) unstable; urgency=low
   * Disabled --force-overwrites.
   * Removed core file from source
 
- -- Michael Alan Dorman <mdorman@debian.org>  Tue,  9 Jan 2018 03:34:28 -0500
+ -- Michael Alan Dorman <mdorman@debian.org>  Tue,  9 Jan 1998 03:34:28 -0500
 
 dpkg (1.4.0.19) unstable; urgency=low
 
