Document in its man page that update-alternatives requires cooperation from all packages dealing with the specific file. Closes: #396338 Thanks to Tomas Pospisek <tpo_deb@sourcepole.ch>.

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,9 @@ dpkg (1.13.25~) UNRELEASED; urgency=low
   [ Guillem Jover ]
   * Fix year 2018 in changelog for Michael Alan Dorman's upload in 1998,
     which was confusing the changelog parsers.
+  * Document in its man page that update-alternatives requires cooperation
+    from all packages dealing with the specific file. Closes: #396338
+    Thanks to Tomas Pospisek <tpo_deb@sourcepole.ch>.
 
   [ Updated dpkg translations ]
   * Chinese (Traditional, Asho Yeh)
