Require POSIX inside subprocerr in controllib.pl. Closes: #390636 Thanks to Brendan O'Dea <bod@debian.org>.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-11-24  Brendan O'Dea  <bod@debian.org>
+
+	* scripts/controllib.pl (subprocerr): Require POSIX for WIFEXITED,
+	WEXITSTATUS, WIFSIGNALED and WTERMSIG.
+
 2006-10-13  Guillem Jover  <guillem@debian.org>
 
 	* configure.ac: Bump version to 1.13.25~.
