--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ dpkg (1.13.25~) UNRELEASED; urgency=low
   * Document in its man page that update-alternatives requires cooperation
     from all packages dealing with the specific file. Closes: #396338
     Thanks to Tomas Pospisek <tpo_deb@sourcepole.ch>.
+  * Require POSIX inside subprocerr in controllib.pl. Closes: #390636
+    Thanks to Brendan O'Dea <bod@debian.org>.
 
   [ Updated dpkg translations ]
   * Chinese (Traditional, Asho Yeh)
