--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,8 @@ dpkg (1.13.25~) UNRELEASED; urgency=low
     Thanks to Tomas Pospisek <tpo_deb@sourcepole.ch>.
   * Require POSIX inside subprocerr in controllib.pl. Closes: #390636
     Thanks to Brendan O'Dea <bod@debian.org>.
+  * Support extracting lzma compressed source and binary packages,
+    and add a Suggests on package lzma. Closes: #347715
 
   [ Updated dpkg translations ]
   * Chinese (Traditional, Asho Yeh)
