Vietnamese translation update

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-11-06  Clytie Siddall  <clytie@riverland.net.au>
+
+	* vi.po: Various fixes
+
 2006-11-17  Guillem Jover  <guillem@debian.org>
 
 	* ca.po: Correct s/gzip/bzip2/ in 2 strings. Add missing '%s' in
