Remove non-ASCII non-UTF-8 in headers

--- a/po/fr.po
+++ b/po/fr.po
@@ -14,18 +14,18 @@
 #
 # Messages français pour dpkg (Linux-GNU Debian).
 # Copyright (C) 1997 Christophe Le Bars <clebars@debian.org>.
-# Copyright (C) 2000 Jérôme Marant <jerome.marant@free.fr>
+# Copyright (C) 2000 Jerome Marant <jerome.marant@free.fr>
 # Copyright (C) 2000, 2001, 2002 Martin Quinson <Martin.Quinson@tuxfamily.org>
 #
 # Christian Perrier <bubulle@debian.org>, 2005, 2006.
-# Frédéric Bothamy <frederic.bothamy@free.fr>, 2006.
+# Frederic Bothamy <frederic.bothamy@free.fr>, 2006.
 msgid ""
 msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-08-17 16:02+0200\n"
 "PO-Revision-Date: 2006-09-05 07:06+0100\n"
-"Last-Translator: Frédéric Bothamy <frederic.bothamy@free.fr>\n"
+"Last-Translator: Frederic Bothamy <frederic.bothamy@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
