--- a/po/es.po
+++ b/po/es.po
@@ -1,9 +1,9 @@
-# Mensajes en español para Debian dpkg.
+# Mensajes en espanol para Debian dpkg.
 # Copyright 1999, 2000 Software in the Public Interest.
-# Nicolás Lichtmaier <nick@debian.org>, 1999.
+# Nicolas Lichtmaier <nick@debian.org>, 1999.
 # Tinguaro Barreno Delgado <tbarreno@debian.org>, 1999.
-# Tomás Bautista <bautista@cma.ulpgc.es>, 2000.
-# Javier Fernández-Sanguino Peña <jfs@computer.org>, 2000,2004-2006.
+# Tomas Bautista <bautista@cma.ulpgc.es>, 2000.
+# Javier Fernandez-Sanguino Pena <jfs@computer.org>, 2000,2004-2006.
 # Santiago Vila <sanvila@debian.org>, 2000, 2001, 2004.
 #
 msgid ""
@@ -12,7 +12,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-08-17 16:02+0200\n"
 "PO-Revision-Date: 2006-09-14 02:25+0200\n"
-"Last-Translator: Javier Fernández-Sanguino <jfs@debian.org>\n"
+"Last-Translator: Javier Fernandez-Sanguino <jfs@debian.org>\n"
 "Language-Team: Spanish <debian-l10n-spanish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
