[l10n] Fix bad typo in Catalan dpkg-dev.

--- a/debian/changelog
+++ b/debian/changelog
@@ -21,6 +21,9 @@ dpkg (1.13.25~) UNRELEASED; urgency=low
   * Swedish (Peter Karlsson).
   * Vietnamese (Clytie Siddall). Closes: #399343
 
+  [ Updated dpkg-dev translations ]
+  * Catalan (Jordi Mallach)
+
  -- Guillem Jover <guillem@debian.org>  Fri, 13 Oct 2006 16:54:58 +0300
 
 dpkg (1.13.24) unstable; urgency=low
