[l10n] Catalan typo fixed.

--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-12-04  Jordi Mallach  <jordi@debian.org>
+
+	* ca.po: Fix typo.
+
 2006-10-11  Nicolas Francois  <nicolas.francois@centraliens.net>
 
 	* LINGUAS: Activate the Catalan translation.
