--- a/scripts/po/ca.po
+++ b/scripts/po/ca.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: dpkg 1.13.22\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-06-21 07:29+0300\n"
-"PO-Revision-Date: 2006-10-11 14:59+0200\n"
+"PO-Revision-Date: 2006-12-04 13:59+0100\n"
 "Last-Translator: Jordi Mallach <jordi@debian.org>\n"
 "Language-Team: Catalan <debian-l10n-catalan@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -197,17 +197,17 @@ msgstr ""
 #: scripts/controllib.pl:420
 #, perl-format
 msgid "%s: error: %s"
-msgstr ""
+msgstr "%s: error: %s"
 
 #: scripts/controllib.pl:421
 #, perl-format
 msgid "%s: internal error: %s"
-msgstr ""
+msgstr "%s: error intern: %s"
 
 #: scripts/controllib.pl:422
 #, perl-format
 msgid "%s: warning: %s"
-msgstr ""
+msgstr "%s: avís: %s"
 
 #: scripts/controllib.pl:434
 #, perl-format
@@ -1664,12 +1664,12 @@ msgstr "no s'ha pogut verificar la signatura de %s perquè gpg no està instal·
 #: scripts/dpkg-source.pl:637
 #, perl-format
 msgid "extracting unsigned source package (%s)"
-msgstr "s'està extraient el packet font sense signar (%s)"
+msgstr "s'està extraient el paquet font sense signar (%s)"
 
 #: scripts/dpkg-source.pl:641
 #, perl-format
 msgid "source control file %s"
-msgstr ""
+msgstr "fitxer de control font %s"
 
 #: scripts/dpkg-source.pl:646
 #, perl-format
