small (but important :-) fixes

--- a/po/ro.po
+++ b/po/ro.po
@@ -21,7 +21,7 @@ msgstr ""
 "Project-Id-Version: ro\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-08-17 16:02+0200\n"
-"PO-Revision-Date: 2006-10-20 11:47+0300\n"
+"PO-Revision-Date: 2006-12-22 13:49+0200\n"
 "Last-Translator: Eddy Petrișor <eddy.petrisor@gmail.com>\n"
 "Language-Team: Romanian <debian-l10n-romanian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -984,12 +984,12 @@ msgstr "arhiva conţine obiectul „%.255s” de tip necunoscut 0x%x"
 #: src/archives.c:499
 #, c-format
 msgid "Replacing files in old package %s ...\n"
-msgstr "Se înlocuieşte fişierele în pachetul vechi %s ...\n"
+msgstr "Se înlocuiesc fişierele în pachetul vechi %s ...\n"
 
 #: src/archives.c:502
 #, c-format
 msgid "Replaced by files in installed package %s ...\n"
-msgstr "Înlocuite de fişierele în pachetul instalat %s ...\n"
+msgstr "Înlocuite de fişierele din pachetul instalat %s ...\n"
 
 #: src/archives.c:508
 #, c-format
@@ -2815,7 +2815,7 @@ msgstr "dpkg: avertisment - se ignoră problema de antedependenţă !\n"
 #: src/processarc.c:294
 #, c-format
 msgid "Preparing to replace %s %s (using %s) ...\n"
-msgstr "Se pregăteşte înlocuirea %s %s (folosind %s) ...\n"
+msgstr "Se pregăteşte înlocuirea lui %s %s (folosind %s) ...\n"
 
 #: src/processarc.c:299
 #, c-format
@@ -2851,7 +2851,7 @@ msgstr "Se deconfigurează %s, pentru a fi posibilă ştergerea %s ...\n"
 #: src/processarc.c:469
 #, c-format
 msgid "Unpacking replacement %.250s ...\n"
-msgstr "Se dezarhivează pachetul înlocuitor pentru %.250s ...\n"
+msgstr "Se dezarhivează pachetul înlocuitor (%.250s) ...\n"
 
 #: src/processarc.c:550
 msgid "unable to exec dpkg-deb to get filesystem archive"
