[l10n:ro] added the forgotten po/Changelog snippet; corrected my name

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,7 +16,7 @@ dpkg (1.13.25~) UNRELEASED; urgency=low
   * Korean (Sunjae Park). Closes: #394135
   * Norwegian Bokmal (Hans Fredrik Nordhaug). Closes: #391143
   * Nepali (Shiva Prasad Pokharel).
-  * Romanian (Eddy Petrişor).
+  * Romanian (Eddy Petrișor).
   * Catalan (Jordà Polo).
   * Swedish (Peter Karlsson).
   * Vietnamese (Clytie Siddall). Closes: #399343
