--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-12-22  Eddy Petrișor  <eddy.petrisor@gmail.com>
+
+	* ro.po: some improvements in wording and wrote my name with the right
+	diacritics (still 920t).
+
 2006-11-06  Clytie Siddall  <clytie@riverland.net.au>
 
 	* vi.po: Various fixes
