Add partial Punjabi translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,10 +16,11 @@ dpkg (1.13.25~) UNRELEASED; urgency=low
   * Korean (Sunjae Park). Closes: #394135
   * Norwegian Bokmal (Hans Fredrik Nordhaug). Closes: #391143
   * Nepali (Shiva Prasad Pokharel).
-  * Romanian (Eddy Petrișor).
+  * Romanian (Eddy Petri?or).
   * Catalan (Jordà Polo).
   * Swedish (Peter Karlsson).
   * Vietnamese (Clytie Siddall). Closes: #399343
+  * Punjabi added (A S Alam).
 
   [ Updated dpkg-dev translations ]
   * Catalan (Jordi Mallach)
