--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-12-25  A S Alam  <apbrar@gmail.com>
+
+	* pa.po: New Punjabi translation (201t up to now)
+
 2006-12-22  Eddy Petrișor  <eddy.petrisor@gmail.com>
 
 	* ro.po: some improvements in wording and wrote my name with the right
