Updated Korean dpkg translation. Thanks to Sunjae Park.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-12-31  Sunjae Park  <darehanl@gmail.com>
+
+	* ko.po: Updated to 920t.
+
 2006-12-25  A S Alam  <apbrar@gmail.com>
 
 	* pa.po: New Punjabi translation (201t up to now)
