Updated dselect Korean translations. Thanks to Sunjae Park.

--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-12-31  Sunjae Park  <darehanl@gmail.com>
+
+	* ko.po: Updated to 298t.
+
 2006-10-11  Jordi Mallach  <jordi@debian.org>
 
 	* ca.po: Updated to 289t.
