--- a/debian/changelog
+++ b/debian/changelog
@@ -25,6 +25,9 @@ dpkg (1.13.25~) UNRELEASED; urgency=low
   [ Updated dpkg-dev translations ]
   * Catalan (Jordi Mallach)
 
+  [ Updated dselect translations ]
+  * Korean (Sunjae Park). Closes: #404943
+
  -- Guillem Jover <guillem@debian.org>  Fri, 13 Oct 2006 16:54:58 +0300
 
 dpkg (1.13.24) unstable; urgency=low
