--- a/dselect/po/ko.po
+++ b/dselect/po/ko.po
@@ -4,10 +4,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: dpkg 1.13\n"
+"Project-Id-Version: dpkg\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-05-03 11:56+0300\n"
-"PO-Revision-Date: 2006-02-17 08:57+0200\n"
+"PO-Revision-Date: 2006-12-29 08:18+0900\n"
 "Last-Translator: Changwoo Ryu <cwryu@debian.org>\n"
 "Language-Team: Korean <cwryu@debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -825,26 +825,28 @@ msgid "menu"
 msgstr "메뉴"
 
 #: dselect/main.cc:150
-#, fuzzy, c-format
+#, c-format
 msgid "Debian `%s' package handling frontend version %s.\n"
-msgstr "데비안 `%s' 꾸러미 처리 프론트엔드."
+msgstr "데비안 `%s' 꾸러미 처리 프론트엔드 버전 %s.\n"
 
 #: dselect/main.cc:153
 msgid ""
 "Copyright (C) 1994-1996 Ian Jackson.\n"
 "Copyright (C) 2000,2001 Wichert Akkerman.\n"
 msgstr ""
+"Copyright (C) 1994-1996 Ian Jackson.\n"
+"Copyright (C) 2000,2001 Wichert Akkerman.\n"
 
 #: dselect/main.cc:157
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "This is free software; see the GNU General Public License version 2 or\n"
 "later for copying conditions. There is NO warranty.\n"
 "See %s --license for copyright and license details.\n"
 msgstr ""
-"자유 소프트웨어입니다.  복사 조건에 관해서는 GNU General Public License\n"
-"version 2를 보십시오.  어떤 보증도 하지 않습니다.\n"
-"저작권 관련 정보를 보려면 dpkg --licence를 참고하십시오.\n"
+"자유 소프트웨어입니다. 복사 조건에 관해서는 GNU General Public License\n"
+"version 2이상을 보십시오. 어떤 보증도 하지 않습니다.\n"
+"저작권 관련 정보를 보려면 %s --licence를 참고하십시오.\n"
 
 #: dselect/main.cc:171
 #, c-format
@@ -852,6 +854,8 @@ msgid ""
 "Usage: %s [<option> ...] [<action> ...]\n"
 "\n"
 msgstr ""
+"사용법: %s [<option> ...] [<action> ...]\n"
+"\n"
 
 #: dselect/main.cc:175
 #, c-format
@@ -864,6 +868,13 @@ msgid ""
 "                             Configure screen colours.\n"
 "\n"
 msgstr ""
+"옵션:\n"
+"  --admindir <directory>     %s 대신 <directory> 사용.\n"
+"  --expert                   고급 모드를 사용.\n"
+"  --debug <file> | -D<file>  디버깅 사용하여 <file>로 출력을 보냅니다.\n"
+"  --colour | --color screenpart:[foreground],[background][:attr[+attr+..]]\n"
+"                             화면색 설정.\n"
+"\n"
 
 #: dselect/main.cc:184
 #, c-format
@@ -873,6 +884,10 @@ msgid ""
 "  --license | --licence      Show the license.\n"
 "\n"
 msgstr ""
+"  --help                     이 도움말 메시지 봄.\n"
+"  --version                  버전을 봄.\n"
+"  --license | --licence      저작권 관련 정보를 봄.\n"
+"\n"
 
 #: dselect/main.cc:190
 #, c-format
@@ -881,6 +896,9 @@ msgid ""
 "  access update select install config remove quit\n"
 "\n"
 msgstr ""
+"동작:\n"
+"  access update select install config remove quit\n"
+"\n"
 
 #: dselect/main.cc:194
 #, c-format
@@ -932,13 +950,13 @@ msgid "Terminal does not appear to support highlighting.\n"
 msgstr "터미널이 반전을 지원하지 않는 것 같습니다.\n"
 
 #: dselect/main.cc:321
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Set your TERM variable correctly, use a better terminal,\n"
 "or make do with the per-package management tool %s.\n"
 msgstr ""
-"TERM 변수를 정확히 설정하거나 더 나은 터미널을 사용하십시오.\n"
-"혹은 개개 꾸러미 관리 도구를 이용하십시오. "
+"TERM 변수를 정확히 설정하든지 더 나은 터미널을 사용하든지,\n"
+"각 꾸러미 별로 개별적인 관리 도구 %s 이용하십시오.\n"
 
 #: dselect/main.cc:324
 msgid "terminal lacks necessary features, giving up"
