Add '/emul/ia32-linux' biarch paths to dpkg-shlibdeps. Closes: #403216

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-01-01  Guillem Jover  <guillem@debian.org>
+
+	* scripts/dpkg-shlibdeps.pl (@librarypaths): Add '/emul/ia32-linux/lib'
+	and '/emul/ia32-linux/usr/lib'.
+
 2006-11-24  Guillem Jover  <guillem@debian.org>
 
 	* scripts/dpkg-source.pl: Add lzma extracting support.
