--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ dpkg (1.13.25~) UNRELEASED; urgency=low
     Thanks to Brendan O'Dea <bod@debian.org>.
   * Support extracting lzma compressed source and binary packages,
     and add a Suggests on package lzma. Closes: #347715
+  * Add '/emul/ia32-linux' biarch paths to dpkg-shlibdeps. Closes: #403216
 
   [ Updated dpkg translations ]
   * Chinese (Traditional, Asho Yeh)
