ko.po: Mark again 1 string as fuzzy, as it was not matching the format characters.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-01-01  Guillem Jover  <guillem@debian.org>
+
+	* ko.po: Mark again 1 string as fuzzy, as it was not matching the
+	format characters.
+
 2006-12-31  Sunjae Park  <darehanl@gmail.com>
 
 	* ko.po: Updated to 920t.
