Remove non-modified /etc/dpkg/dpkg.cfg configuration file when upgrading from versions 1.9.21 through 1.10.28, to avoid getting prompted about conffile changes. Closes: #398061

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,9 @@ dpkg (1.13.25~) UNRELEASED; urgency=low
   * Support extracting lzma compressed source and binary packages,
     and add a Suggests on package lzma. Closes: #347715
   * Add '/emul/ia32-linux' biarch paths to dpkg-shlibdeps. Closes: #403216
+  * Remove non-modified /etc/dpkg/dpkg.cfg configuration file when upgrading
+    from versions 1.9.21 through 1.10.28, to avoid getting prompted about
+    conffile changes. Closes: #398061
 
   [ Updated dpkg translations ]
   * Chinese (Traditional, Asho Yeh)
