--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-01-02  Guillem Jover  <guillem@debian.org>
+
+	* configure.ac: Release 1.13.25.
+
 2007-01-01  Guillem Jover  <guillem@debian.org>
 
 	* scripts/dpkg-shlibdeps.pl (@librarypaths): Add '/emul/ia32-linux/lib'
