--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.13.25~) UNRELEASED; urgency=low
+dpkg (1.13.25) unstable; urgency=low
 
   [ Guillem Jover ]
   * Fix year 2018 in changelog for Michael Alan Dorman's upload in 1998,
@@ -32,7 +32,7 @@ dpkg (1.13.25~) UNRELEASED; urgency=low
   [ Updated dselect translations ]
   * Korean (Sunjae Park). Closes: #404943
 
- -- Guillem Jover <guillem@debian.org>  Fri, 13 Oct 2006 16:54:58 +0300
+ -- Guillem Jover <guillem@debian.org>  Tue,  2 Jan 2007 00:23:57 +0200
 
 dpkg (1.13.24) unstable; urgency=low
 
