--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.14.0) UNRELEASED; urgency=low
+
+  * 
+
+ -- Guillem Jover <guillem@debian.org>  Tue,  9 Jan 2007 22:48:47 +0200
+
 dpkg (1.13.25) unstable; urgency=low
 
   [ Guillem Jover ]
