Make the copyright information in dpkg-deb.1 and dpkg-split.1 match the one in the source. Thanks to Nicolas François. Closes: #379320

--- a/man/C/dpkg-deb.1
+++ b/man/C/dpkg-deb.1
@@ -271,7 +271,7 @@ package's scripts run and its status and contents recorded.
 .B dpkg\-deb
 and this manpage were written by Ian Jackson.
 They are Copyright (C) 1995-1996 by him and released under the
-GNU General Public Licence; there is NO WARRANTY. See
+GNU General Public Licence version 2 or later; there is NO WARRANTY. See
 .I /usr/share/doc/dpkg/copyright
 and
 .I /usr/share/common\-licenses/GPL
