--- a/man/C/dpkg-split.1
+++ b/man/C/dpkg-split.1
@@ -252,9 +252,9 @@ filename format should not be relied upon.
 .B dpkg\-split
 and this manpage were written by Ian Jackson. They are
 Copyright (C) 1995-1996
-by him and released under the GNU General Public Licence; there is NO
-WARRANTY. See
-.I /usr/share/dpkg/copyright
+by him and released under the GNU General Public Licence version 2 or later;
+there is NO WARRANTY. See
+.I /usr/share/doc/dpkg/copyright
 and
 .I /usr/share/common\-licenses/GPL
 for details.
