ro: typo fix in dpkg-divert help

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-12-22  Eddy Petrișor  <eddy.petrisor@gmail.com>
+
+	* ro.po: typo correction in dpkg-divert
+
 2007-01-01  Guillem Jover  <guillem@debian.org>
 
 	* ko.po: Mark again 1 string as fuzzy, as it was not matching the
