--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+dpkg (?1.13.26?) UNRELEASED; urgency=low
+
+  [ Updated dpkg translations ]
+  * Romanian (Eddy Petrișor)
+
+ -- Eddy Petrișor <eddy.petrisor@gmail.com>  Fri, 12 Jan 2007 01:04:37 +0200
+
 dpkg (1.13.25) unstable; urgency=low
 
   [ Guillem Jover ]
