Do not bail out in dpkg when building without start-stop-daemon support, by checking if the macro value is true instead of it being defined. Thanks to Mark Rosenstand.

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,9 @@ dpkg (1.14.0) UNRELEASED; urgency=low
   * Move retrieval of uid and gid information from controllib.pl into a
     function, so that scripts not needing it do not execute that code.
     Based on a patch by Riku Voipio. Closes: #396884
+  * Do not bail out in dpkg when building without start-stop-daemon support,
+    by checking if the macro value is true instead of it being defined.
+    Thanks to Mark Rosenstand.
 
   [ Updated dpkg translations ]
   * Romanian (Eddy Petrișor)
