--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,6 @@
-2006-12-22  Eddy Petrișor  <eddy.petrisor@gmail.com>
+2007-01-11  Eddy Petrișor  <eddy.petrisor@gmail.com>
 
-	* ro.po: typo correction in dpkg-divert
+	* ro.po: Typo correction in dpkg-divert.
 
 2007-01-01  Guillem Jover  <guillem@debian.org>
 
