Make all perl scripts use static and warnings, to ease catching errors.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2007-01-15  Guillem Jover  <guillem@debian.org>
+
+	* scripts/dpkg-gettext.pl: Remove duplicate 'use static'.
+	* scripts/cleanup-info.pl: Use static and warnings.
+	* scripts/dpkg-divert.pl: Likewise. Declare variables with 'my'.
+	* scripts/dpkg-statoverride.pl: Likewise.
+	* scripts/update-alternatives.pl: Likewise.
+
 2007-01-12  Mark Rosenstand  <mark@borkware.net>
 
 	* src/help.c (checkpath): Check for the value of the macro
