--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ dpkg (1.14.0) UNRELEASED; urgency=low
   * Do not bail out in dpkg when building without start-stop-daemon support,
     by checking if the macro value is true instead of it being defined.
     Thanks to Mark Rosenstand.
+  * Make all perl scripts use static and warnings, to ease catching errors.
 
   [ Updated dpkg translations ]
   * Romanian (Eddy Petrișor).
