Add a missing newline to a warning message in dpkg. Closes: #390914 Thanks to Ian Jackson.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-01-15  Ian Jackson  <iwj@ubuntu.com>
+
+	* src/processarc.c (process_archive): Add a missing newline to a
+	warning message.
+
 2007-01-15  Guillem Jover  <guillem@debian.org>
 
 	* scripts/dpkg-gettext.pl: Remove duplicate 'use static'.
