--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,8 @@ dpkg (1.14.0) UNRELEASED; urgency=low
     by checking if the macro value is true instead of it being defined.
     Thanks to Mark Rosenstand.
   * Make some perl scripts use static and warnings, to ease catching errors.
+  * Add a missing newline to a warning message in dpkg. Closes: #390914
+    Thanks to Ian Jackson.
 
   [ Updated dpkg translations ]
   * Romanian (Eddy Petrișor).
