As dselect.cfg.5 is similar to dpkg.cfg.5, it was translated automatically. The addendum is needed.

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,5 +1,9 @@
 2007-01-16  Nicolas Francois  <nicolas.francois@centraliens.net>
 
+	* po/add_fr/dselect.cfg.5.fr.add: New translated man page.
+
+2007-01-16  Nicolas Francois  <nicolas.francois@centraliens.net>
+
 	* po/: New directory.
 	* po/dpkg-man.pot, po/de.po, po/es.po, po/fr.po, po/hu.po,
 	po/ja.po, po/pl.po, po/pt_BR.po, po/ru.po, po/sv.po: Merge the POs
