--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,8 @@ dpkg (1.14.0) UNRELEASED; urgency=low
   * Make some perl scripts use static and warnings, to ease catching errors.
   * Add a missing newline to a warning message in dpkg. Closes: #390914
     Thanks to Ian Jackson.
+  * Fix typo in variable name in dpkg-source which was causing it to not
+    create directories when extracting the diff. Closes: #374645
 
   [ Updated dpkg translations ]
   * Romanian (Eddy Petrișor).
