Fix up and down keystrokes in the dselect help message. Closes: #383438 Thanks to Sven Joachim.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-01-23  Sven Joachim  <sven_joachim@web.de>
+	    Guillem Jover  <guillem@debian.org>
+
+	* dselect/helpmsgs.cc (hlp_listkeys): Fix up and down keystrokes.
+	(hlp_methkeys): Reorder up and down keystrokes.
+
 2007-01-23  Guillem Jover  <guillem@debian.org>
 
 	* scripts/dpkg-source.pl: Fix typo in variable name from $dirc to
