--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,8 @@ dpkg (1.14.0) UNRELEASED; urgency=low
     Thanks to Ian Jackson.
   * Fix typo in variable name in dpkg-source which was causing it to not
     create directories when extracting the diff. Closes: #374645
+  * Fix up and down keystrokes in the dselect help message. Closes: #383438
+    Thanks to Sven Joachim.
 
   [ Updated dpkg translations ]
   * Romanian (Eddy Petrișor).
