Convert 822-date to be a simple wrapper around 'date -R'. 822-date is now deprecated and should not be used anymore. It might be removed sometime in the future. Closes: #31634, #367712, #314462 Thanks to Frank Lichtenheld.

--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,10 @@ dpkg (1.14.0) UNRELEASED; urgency=low
     create directories when extracting the diff. Closes: #374645
   * Fix up and down keystrokes in the dselect help message. Closes: #383438
     Thanks to Sven Joachim.
+  * Convert 822-date to be a simple wrapper around 'date -R'. 822-date is
+    now deprecated and should not be used anymore. It might be removed
+    sometime in the future. Closes: #31634, #367712, #314462
+    Thanks to Frank Lichtenheld.
 
   [ Updated dpkg translations ]
   * Romanian (Eddy Petrișor).
