--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2007-01-24  Frank Lichtenheld  <djpig@debian.org>
+
+	* 822-date.1: 822-date is now deprecated. Document this fact in
+	the man page.
+
 2007-01-16  Nicolas Francois  <nicolas.francois@centraliens.net>
 
 	* po/add_fr/dselect.cfg.5.fr.add: New translated man page.
