* scripts/controllib.pl: Move substvar initializations to ... 	(init_substvars): ... here.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-01-24  Guillem Jover  <guillem@debian.org>
+
+	* scripts/controllib.pl: Move substvar initializations to ...
+	(init_substvars): ... here.
+
 2007-01-24  Frank Lichtenheld  <djpig@debian.org>
 
 	* scripts/822-date.pl: Convert the script to be a simple wrapper
