--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-02-11  Ian Jackson  <iwj@ubuntu.com>
+	    Guillem Jover  <guillem@debian.org>
+
+	* src/depcon.c (describedepcon): Use format arguments to make the
+	strings l10n-friendlier.
+
 2007-02-04  Julien Cristau  <jcristau@debian.org>
 
 	* scripts/dpkg-source.pl ($diff_ignore_default_regexp): Add
