--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,8 @@ dpkg (1.14.0) UNRELEASED; urgency=low
     Thanks to Frank Lichtenheld.
   * Add '.gitignore' to the default dpkg-source -i regex. Closes: #409566
     Thanks to Julien Cristau.
+  * Use l10n-friendlier strings to describe dependencies. Closes: #390916
+    Thanks to Ian Jackson.
 
   [ Updated dpkg translations ]
   * Romanian (Eddy Petrișor).
