Fix confusing bottom status lines in dselect, unifying them by removing the method or package name and capitalizing. Closes: #9085

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2007-02-11  Guillem Jover  <guillem@debian.org>
+
+	* dselect/pkglist.h (packagelist::severalinfoblurb): Do not take a
+	string argument. Fix all callers.
+	* dselect/pkginfo.cc (packagelist::severalinfoblurb): Likewise.
+	(packagelist::itd_relations): Capitalize and make whatinfo setting
+	common and move it outside of the if block, and do not add the
+	package name.
+	(packagelist::itd_description): Likewise.
+	(packagelist::itd_statuscontrol): Likewise.
+	(packagelist::itd_availablecontrol): Likewise.
+	* dselect/baselist.cc (baselist::itd_keys): Capitalize whatinfo string.
+	* dselect/methlist.cc (methodlist::itd_description): Likewise and do
+	not print the method name.
+
 2007-02-11  Ian Jackson  <iwj@ubuntu.com>
 	    Guillem Jover  <guillem@debian.org>
 
