* scripts/controllib.pl (outputclose): Change argument from a boolean 	to an optional filename argument. Fix all callers. 	(parsecontrolfile): Take '$controlfile' as an explicit argument. 	Fix all callers. 	(parsesubstvars): Take '$varlistfile' as an explicit argument. 	Fix all callers. 	(parsechangelog): Take '$changelogfile' as an explicit argument, 	'$changelogformat' and '$since' as optional arguments. Fix all 	callers. 	(setsourcepackage): Take '$v' as an explicit argument.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2007-02-12  Guillem Jover  <guillem@debian.org>
+
+	* scripts/controllib.pl (outputclose): Change argument from a boolean
+	to an optional filename argument. Fix all callers.
+	(parsecontrolfile): Take '$controlfile' as an explicit argument.
+	Fix all callers.
+	(parsesubstvars): Take '$varlistfile' as an explicit argument.
+	Fix all callers.
+	(parsechangelog): Take '$changelogfile' as an explicit argument,
+	'$changelogformat' and '$since' as optional arguments. Fix all
+	callers.
+	(setsourcepackage): Take '$v' as an explicit argument.
+
 2007-02-11  Guillem Jover  <guillem@debian.org>
 
 	* dselect/pkglist.h (packagelist::severalinfoblurb): Do not take a
