Check proper error value returned by BZ2_bzerror. Closes: #410605

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-02-13  Guillem Jover  <guillem@debian.org>
+
+	* lib/compression.c (decompress_cat): Use BZ_IO_ERROR instead of
+	Z_ERRNO for the error value returned by BZ2_bzerror.
+
 2007-02-12  Guillem Jover  <guillem@debian.org>
 
 	* scripts/dpkg-shlibdeps.pl: Move syserr:s to be or'ed after exec:s.
