--- a/debian/changelog
+++ b/debian/changelog
@@ -31,6 +31,7 @@ dpkg (1.14.0) UNRELEASED; urgency=low
   * Do not use a build-stamp in debian/rules.
   * Fix confusing bottom status lines in dselect, unifying them by removing
     the method or package name and capitalizing. Closes: #9085
+  * Check proper error value returned by BZ2_bzerror. Closes: #410605
 
   [ Updated dpkg translations ]
   * Romanian (Eddy Petrișor).
